--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "html-react-parser": "^5.1.10",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
