--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "framer-motion": "^11.2.12",
     "html-react-parser": "^5.1.10",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
